<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundc"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/textViewUserEmail"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="10dp"
                android:id="@+id/schoolcardview"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/certi"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundpurple"/>

                    <View
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/material_deep_purple"
                        android:padding="10dp"
                        />
                    <TextView
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/Certificate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="10dp"
                android:id="@+id/libraryCardView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/photo"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundpink"/>

                    <View
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/material_pink"
                        android:padding="10dp"
                        />
                    <TextView
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/PhotoandSign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="10dp"
                android:id="@+id/id"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/id"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundblue"/>

                    <View
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/material_blue"
                        android:padding="10dp"
                        />
                    <TextView
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="10dp"
                android:id="@+id/marksheetCardView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/mark"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundgren"/>

                    <View
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/material_green"
                        android:padding="10dp"
                        />
                    <TextView
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/marksheets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="10dp"
                android:id="@+id/aadhar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/idproof"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundpurple"/>

                    <View
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/material_deep_purple"
                        android:padding="10dp"
                        />
                    <TextView
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/aadhar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_margin="10dp"
                android:id="@+id/other"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:src="@drawable/docs"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:padding="10dp"
                        android:background="@drawable/circlebackgroundpink"/>

                    <View
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/material_pink"
                        android:padding="10dp"
                        />
                    <TextView
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:text="@string/Other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:id="@+id/buttonLogout"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>